--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MotorShwap</title>
-    <link rel="icon" href="images/iconlogo.jpg" type="image/x-icon">
+    <link rel="icon" href="iconlogo.jpg" type="x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@300;400;600&display=swap" rel="stylesheet"> 
     <style>
@@ -23,7 +23,7 @@
         header {
             background-image: 
                 linear-gradient(to right, rgba(0, 0, 0, 0.3) 10%, black 75%), 
-                url("images/header.jpg");
+                url("header.jpg");
             background-size: cover;
             background-position: center;
             height: 400px;
@@ -306,7 +306,7 @@
     </header>
 
     <div class="main-content">
-        <img src="images/aerox.jpg" alt="motor" /> 
+        <img src="aerox.jpg" alt="motor" /> 
         <div>
             <h1>ABOUT ME</h1>
             <p>My name is Mikko Xyrelle T. Meneses, and I am passionate about helping customers find the perfect motorcycle at our motor shop. With a keen eye for detail and a deep understanding of various models and features, I strive to make each buying experience enjoyable and informative. Whether you’re looking for a sleek sportbike, a sturdy cruiser, or an adventurous dual-sport, I’m here to guide you through every step of the process, ensuring you ride away with exactly what you need. My goal is to build lasting relationships with my clients, making sure they feel confident and satisfied with their choices.</p>
