--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MotorShwap</title>
-    <link rel="icon" href="images/iconlogo.jpg" type="image/x-icon">
+    <link rel="icon" href="iconlogo.jpg" type="x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@300;400;600&display=swap" rel="stylesheet"> 
     <style>
@@ -22,7 +22,7 @@
         header {
             background-image: 
                 linear-gradient(to right, rgba(0, 0, 0, 0.3) 10%, black 75%), 
-                url("images/header.jpg");
+                url("header.jpg");
             background-size: cover;
             background-position: center;
             height: 400px;
@@ -289,7 +289,7 @@
     </header>
 
     <div class="main-content">
-        <img src="images/body1.jpg" alt="Motorcycle Parts" />
+        <img src="body1.jpg" alt="Motorcycle Parts" />
         <div>
             <h1>
                 <span>WANT SOME ITEM TO</span><br> 
